fix device range on mobile

--- a/frontend/src/pages/devices/styles.css
+++ b/frontend/src/pages/devices/styles.css
@@ -6,6 +6,7 @@
     max-width: calc(100% - 10px);
 
     @media (max-width: 1024px) {
+        display: block;
         max-width: 100%;
     }
 }
